--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
     "nuxt": "^3.4.2"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/koa": "^2.13.6",
+    "axios": "^1.3.6",
+    "jsonwebtoken": "^9.0.0",
     "koa": "^2.14.2"
   }
 }
