--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
   },
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.1",
-    "@types/koa": "^2.13.6",
-    "#internal/nitro": "^2.13.6",
     "axios": "^1.3.6",
-    "jsonwebtoken": "^9.0.0",
-    "koa": "^2.14.2"
+    "element-plus": "^2.3.4",
+    "jsonwebtoken": "^9.0.0"
   }
 }
